--- a/important-pages/terms-of-service.html
+++ b/important-pages/terms-of-service.html
@@ -1,333 +1,160 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Terms of Service - Chromebook Unlocked Games</title>
-  <meta name="description" content="Terms of Service for Chromebook Unlocked Games.">
-  <link rel="icon" type="image/png" href="../assets/logo.png">
+<main>
+  <p><strong>Last Updated:</strong> October 19, 2025</p>
 
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+  <h2>Acceptance of Terms</h2>
+  <p>
+    By accessing or using ChromebookUnlocked.Github.io (“the Site”), you agree to be bound by these
+    Terms of Service. If you do not agree with these terms, you must discontinue use of the Site
+    immediately.
+  </p>
 
-    :root {
-      --primary-color: #ff66ff;
-      --primary-dark: #cc00ff;
-      --primary-light: #ff99ff;
-      --bg-dark: #0d001a;
-      --bg-medium: #1c0033;
-      --bg-light: #2d0052;
-      --text-primary: #ffffff;
-      --text-secondary: rgba(255, 255, 255, 0.8);
-      --text-muted: rgba(255, 255, 255, 0.6);
-    }
+  <h2>Use of the Service</h2>
 
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: linear-gradient(135deg, var(--bg-dark) 0%, var(--bg-medium) 50%, var(--bg-light) 100%);
-      background-attachment: fixed;
-      color: var(--text-primary);
-      min-height: 100vh;
-      line-height: 1.6;
-    }
+  <h3>Permitted Use</h3>
+  <p>You may use the Site to:</p>
+  <ul>
+    <li>Play free online games</li>
+    <li>Browse our gaming catalog</li>
+    <li>Access educational gaming resources</li>
+    <li>Share game pages and links</li>
+  </ul>
 
-    header {
-      background: rgba(13, 0, 26, 0.85);
-      backdrop-filter: blur(20px);
-      padding: 1rem 2rem;
-      border-bottom: 2px solid rgba(255, 102, 255, 0.3);
-      position: sticky;
-      top: 0;
-      z-index: 100;
-    }
+  <h3>Prohibited Use</h3>
+  <p>You agree not to engage in any of the following activities:</p>
+  <ul>
+    <li>Using the Site for illegal or unauthorized purposes</li>
+    <li>Attempting to disrupt, attack, or interfere with Site operations</li>
+    <li>Downloading, redistributing, or modifying copyrighted games without permission</li>
+    <li>Using automated bots, scrapers, or extraction tools</li>
+    <li>Uploading malware, viruses, or harmful code</li>
+    <li>Attempting to impersonate another person or entity</li>
+    <li>Violating any applicable laws or regulations</li>
+  </ul>
 
-    .header-content {
-      max-width: 1200px;
-      margin: 0 auto;
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-    }
+  <h2>User Responsibilities</h2>
+  <p>Users are responsible for:</p>
+  <ul>
+    <li>Maintaining their own device and internet connection</li>
+    <li>Ensuring compliance with school or organizational rules</li>
+    <li>Determining whether content is age-appropriate</li>
+    <li>Protecting their device from security threats</li>
+  </ul>
 
-    .logo {
-      width: 48px;
-      height: 48px;
-      border-radius: 12px;
-    }
+  <h2>Content and Intellectual Property</h2>
 
-    h1 {
-      font-size: 1.5rem;
-      background: linear-gradient(135deg, var(--primary-color), var(--primary-light));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-    }
+  <h3>Game Ownership</h3>
+  <p>
+    All games displayed or hosted on the Site are owned by their respective creators and licensors.
+    We do not claim ownership over any third-party game content. For copyright concerns, please see
+    our <a href="dmca.html">DMCA Policy</a>.
+  </p>
 
-    main {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 2rem;
-      background: rgba(255, 255, 255, 0.05);
-      border-radius: 16px;
-      border: 1px solid rgba(255, 102, 255, 0.2);
-    }
+  <h3>Site Content</h3>
+  <p>
+    The design, structure, branding, and original content on the Site are protected by copyright
+    and intellectual property laws.
+  </p>
 
-    h2 {
-      color: var(--primary-light);
-      margin: 2rem 0 1rem 0;
-      font-size: 1.5rem;
-    }
+  <h2>Privacy and Data Usage</h2>
+  <p>
+    We respect your privacy and collect minimal information. Please review our
+    <a href="privacy-policy.html">Privacy Policy</a> to understand how information is handled.
+  </p>
 
-    h3 {
-      color: var(--text-primary);
-      margin: 1.5rem 0 0.75rem 0;
-      font-size: 1.2rem;
-    }
+  <h2>Disclaimers</h2>
 
-    p {
-      color: var(--text-secondary);
-      margin: 1rem 0;
-    }
+  <h3>No Warranty</h3>
+  <p>The Site is provided on an “AS IS” and “AS AVAILABLE” basis. We do not guarantee:</p>
+  <ul>
+    <li>Uninterrupted or error-free access</li>
+    <li>The accuracy or reliability of content</li>
+    <li>Availability of specific games at all times</li>
+    <li>Compatibility with every device or browser</li>
+  </ul>
 
-    ul, ol {
-      margin: 1rem 0 1rem 2rem;
-      color: var(--text-secondary);
-    }
+  <h3>Third-Party Content</h3>
+  <p>
+    Some games and features are provided by external developers. We are not responsible for the
+    practices, content, or performance of any third-party services.
+  </p>
 
-    li {
-      margin: 0.5rem 0;
-    }
+  <h2>Limitation of Liability</h2>
+  <p>
+    To the fullest extent allowed by law, ChromebookUnlocked.Github.io is not liable for:
+  </p>
+  <ul>
+    <li>Indirect or consequential damages</li>
+    <li>Loss of data or revenue</li>
+    <li>Technical issues or service interruptions</li>
+    <li>Actions or failures of third-party game providers</li>
+    <li>Damages resulting from use or inability to use the Site</li>
+  </ul>
 
-    a {
-      color: var(--primary-color);
-      text-decoration: none;
-      border-bottom: 1px solid rgba(255, 102, 255, 0.4);
-    }
+  <h2>Age Requirements</h2>
+  <p>
+    The Site is intended for general audiences. However:
+  </p>
+  <ul>
+    <li>Users under 13 should access the Site with parental guidance</li>
+    <li>Some games may include age ratings or content guidelines</li>
+    <li>We do not knowingly collect personal information from children under 13</li>
+    <li>Parents/guardians are responsible for monitoring use</li>
+  </ul>
 
-    a:hover {
-      color: var(--primary-light);
-      border-bottom-color: var(--primary-light);
-    }
+  <h2>Educational Use</h2>
+  <p>
+    Students are encouraged to follow their school’s rules. The Site is not responsible for:
+  </p>
+  <ul>
+    <li>Academic or disciplinary consequences</li>
+    <li>School network restrictions or device policies</li>
+    <li>Inappropriate use during restricted times</li>
+  </ul>
 
-    .back-button {
-      display: inline-block;
-      padding: 0.75rem 1.5rem;
-      background: linear-gradient(135deg, var(--primary-color), var(--primary-dark));
-      color: white;
-      border-radius: 12px;
-      font-weight: 600;
-      margin-top: 2rem;
-      transition: all 0.3s ease;
-      border: none;
-    }
+  <h2>Modifications to the Service</h2>
+  <p>We reserve the right to:</p>
+  <ul>
+    <li>Add, modify, or remove games and features</li>
+    <li>Temporarily suspend Site functionality</li>
+    <li>Update these Terms of Service at any time</li>
+    <li>Restrict access to users violating the terms</li>
+  </ul>
 
-    .back-button:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 6px 20px rgba(255, 102, 255, 0.4);
-    }
+  <h2>External Links</h2>
+  <p>
+    The Site may include links to third-party websites. We are not responsible for the content,
+    security, or privacy practices of those sites.
+  </p>
 
-    footer {
-      text-align: center;
-      padding: 2rem;
-      color: var(--text-muted);
-      font-size: 0.9rem;
-    }
+  <h2>Indemnification</h2>
+  <p>
+    You agree to indemnify and hold harmless the Site, its contributors, and affiliates against
+    claims, damages, or liabilities arising from your use of the Site or violation of these terms.
+  </p>
 
-    @media (max-width: 768px) {
-      main {
-        margin: 1rem;
-        padding: 1.5rem;
-      }
+  <h2>Termination</h2>
+  <p>
+    We may suspend or terminate access at any time for harmful behavior, abuse, or violations of
+    these Terms of Service.
+  </p>
 
-      h1 {
-        font-size: 1.2rem;
-      }
+  <h2>Governing Law</h2>
+  <p>
+    These Terms are governed by applicable laws. Any disputes shall be handled in accordance with
+    relevant legal jurisdictions.
+  </p>
 
-      h2 {
-        font-size: 1.3rem;
-      }
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <div class="header-content">
-      <img src="../assets/logo.png" alt="Chromebook Unlocked Games" class="logo">
-      <h1>Terms of Service</h1>
-    </div>
-  </header>
+  <h2>Changes to This Policy</h2>
+  <p>
+    We may revise or update these Terms periodically. Continued use of the Site indicates acceptance
+    of any updated terms.
+  </p>
 
-  <main>
-    <p><strong>Last Updated:</strong> December 2024</p>
+  <h2>Contact Us</h2>
+  <p>
+    For questions about these Terms, please visit our
+    <a href="contact.html">Contact Page</a>.
+  </p>
 
-    <h2>Acceptance of Terms</h2>
-    <p>
-      By accessing and using Chromebook Unlocked Games ("the Site"), you accept and agree to be bound
-      by these Terms of Service. If you do not agree to these terms, please do not use our site.
-    </p>
-
-    <h2>Use of Service</h2>
-
-    <h3>Permitted Use</h3>
-    <p>You may use our service to:</p>
-    <ul>
-      <li>Play free online games</li>
-      <li>Browse game collections</li>
-      <li>Access educational gaming content</li>
-      <li>Share game links with others</li>
-    </ul>
-
-    <h3>Prohibited Use</h3>
-    <p>You agree NOT to:</p>
-    <ul>
-      <li>Use the site for any illegal purpose</li>
-      <li>Attempt to hack, disrupt, or damage the site</li>
-      <li>Download or redistribute games without permission</li>
-      <li>Use automated bots or scrapers</li>
-      <li>Impersonate others or provide false information</li>
-      <li>Upload or distribute malware, viruses, or harmful code</li>
-      <li>Violate any applicable laws or regulations</li>
-    </ul>
-
-    <h2>User Responsibilities</h2>
-    <p>When using our site, you are responsible for:</p>
-    <ul>
-      <li>Your own internet connection and device</li>
-      <li>Ensuring compliance with your school's or organization's policies</li>
-      <li>Understanding age-appropriate content restrictions</li>
-      <li>Maintaining the security of your device</li>
-    </ul>
-
-    <h2>Content and Intellectual Property</h2>
-
-    <h3>Game Content</h3>
-    <p>
-      All games hosted on this site are the intellectual property of their respective creators
-      and copyright holders. We do not claim ownership of any game content. See our
-      <a href="dmca.html">DMCA Policy</a> for more information.
-    </p>
-
-    <h3>Site Content</h3>
-    <p>
-      The design, layout, and original content of Chromebook Unlocked Games are protected by
-      copyright and other intellectual property laws.
-    </p>
-
-    <h2>Privacy and Data</h2>
-    <p>
-      Your privacy is important to us. Please review our <a href="privacy-policy.html">Privacy Policy</a>
-      to understand how we collect, use, and protect your information.
-    </p>
-
-    <h2>Disclaimers</h2>
-
-    <h3>No Warranty</h3>
-    <p>
-      This site is provided "AS IS" without any warranties, express or implied. We do not guarantee:
-    </p>
-    <ul>
-      <li>Uninterrupted or error-free service</li>
-      <li>Complete accuracy of information</li>
-      <li>That games will always be available</li>
-      <li>Compatibility with all devices or browsers</li>
-    </ul>
-
-    <h3>Third-Party Content</h3>
-    <p>
-      Our site may contain games and content from third parties. We are not responsible for
-      the content, accuracy, or practices of these third parties.
-    </p>
-
-    <h2>Limitation of Liability</h2>
-    <p>
-      To the fullest extent permitted by law, Chromebook Unlocked Games shall not be liable for:
-    </p>
-    <ul>
-      <li>Any indirect, incidental, or consequential damages</li>
-      <li>Loss of data or profits</li>
-      <li>Service interruptions or technical issues</li>
-      <li>Actions taken by third-party game providers</li>
-      <li>Any damages resulting from your use of the site</li>
-    </ul>
-
-    <h2>Age Restrictions</h2>
-    <p>
-      Our site is designed for general audiences. However:
-    </p>
-    <ul>
-      <li>Children under 13 should use the site with parental supervision</li>
-      <li>Some games may have age ratings - check before playing</li>
-      <li>We do not knowingly collect data from children under 13</li>
-      <li>Parents and guardians are responsible for monitoring usage</li>
-    </ul>
-
-    <h2>Educational Use</h2>
-    <p>
-      This site is intended for educational and recreational purposes. Students should:
-    </p>
-    <ul>
-      <li>Follow their school's acceptable use policies</li>
-      <li>Use the site during appropriate times (e.g., breaks, free time)</li>
-      <li>Respect network and device usage guidelines</li>
-      <li>Understand that we are not responsible for school policy violations</li>
-    </ul>
-
-    <h2>Modifications to Service</h2>
-    <p>
-      We reserve the right to:
-    </p>
-    <ul>
-      <li>Modify, suspend, or discontinue any part of the service</li>
-      <li>Add or remove games without notice</li>
-      <li>Update these terms at any time</li>
-      <li>Block access for terms violations</li>
-    </ul>
-
-    <h2>Links to External Sites</h2>
-    <p>
-      Our site may contain links to external websites. We are not responsible for the content,
-      privacy practices, or terms of service of these external sites.
-    </p>
-
-    <h2>Indemnification</h2>
-    <p>
-      You agree to indemnify and hold harmless Chromebook Unlocked Games from any claims,
-      damages, or expenses arising from your use of the site or violation of these terms.
-    </p>
-
-    <h2>Termination</h2>
-    <p>
-      We may terminate or suspend your access to the site at any time, without notice,
-      for conduct that violates these terms or is harmful to other users, us, or third parties.
-    </p>
-
-    <h2>Governing Law</h2>
-    <p>
-      These terms shall be governed by and construed in accordance with applicable laws,
-      without regard to conflict of law provisions.
-    </p>
-
-    <h2>Changes to Terms</h2>
-    <p>
-      We may update these Terms of Service from time to time. Continued use of the site
-      after changes constitutes acceptance of the new terms.
-    </p>
-
-    <h2>Contact Information</h2>
-    <p>
-      If you have questions about these Terms of Service, please visit our
-      <a href="contact.html">Contact page</a>.
-    </p>
-
-    <a href="../index.html" class="back-button">← Back to Games</a>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 Chromebook Unlocked Games. All rights reserved.</p>
-  </footer>
-</body>
-</html>
+  <a href="../index.html" class="back-button">← Back to Games</a>
+</main>
