--- a/games/FNAF 3/index.html
+++ b/games/FNAF 3/index.html
@@ -1,161 +1,38 @@
-<!DOCTYPE html>
-
-
 <!-- Ultimate Game Stash file--> 
 <!-- For the regularly updating doc go to https://docs.google.com/document/d/1_FmH3BlSBQI7FGgAQL59-ZPe8eCxs35wel6JUyVaG8Q/ -->
+<!-- Made by genizy --> 
 
-
-
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-	
-	<meta charset="utf-8">
-	
-	<title>Game 26955</title>
-	<base href="https://cdn.jsdelivr.net/gh/bubbls/fnf-mods@main/fnaf-3/">
-	<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<link rel="shortcut icon" type="image/png" href="./favicon.png">
-	<script type="text/javascript" src="./fnaf.js"></script>
-	<script>
-		window.addEventListener ("touchmove", function (event) { event.preventDefault (); }, { capture: false, passive: false });
-		if (typeof window.devicePixelRatio != 'undefined' && window.devicePixelRatio > 2) {
-			var meta = document.getElementById ("viewport");
-			meta.setAttribute ('content', 'width=device-width, initial-scale=' + (2 / window.devicePixelRatio) + ', user-scalable=no');
-		}
-		window.addEventListener("keydown", function(e) {if(["Space","ArrowUp","ArrowDown","ArrowLeft","ArrowRight"].indexOf(e.code) > -1) {e.preventDefault(); }}, false);
-	</script>
-	
-	<style>
-		html,body { margin: 0; padding: 0; height: 100%; overflow: hidden; }
-		#openfl-content { background: #000000; width: 100%; height: 100%; }
-		@font-face {
-			font-family: '5Computers In Love Regular';
-			src: url('assets/fonts/5Computers-In-Love.eot?#iefix') format('embedded-opentype'),
-			url('assets/fonts/5Computers-In-Love.woff') format('woff'),
-			url('assets/fonts/5Computers-In-Love.ttf') format('truetype'),
-			url('assets/fonts/5Computers-In-Love.svg#5Computers%20In%20Love%20Regular') format('svg');
-			font-weight: normal;
-			font-style: normal;
-		}
-		@font-face {
-			font-family: 'Pixel Arial 11 Bold';
-			src: url('assets/fonts/pixel.eot?#iefix') format('embedded-opentype'),
-			url('assets/fonts/pixel.woff') format('woff'),
-			url('assets/fonts/pixel.otf') format('truetype');
-			font-weight: normal;
-			font-style: normal;
-		}
-		@font-face {
-			font-family: 'STALKER1';
-			src: url('assets/fonts/stalker1.eot?#iefix') format('embedded-opentype'),
-			url('assets/fonts/stalker1.woff') format('woff'),
-			url('assets/fonts/stalker1.ttf') format('truetype'),
-			url('assets/fonts/stalker1.svg#STALKER1') format('svg');
-			font-weight: normal;
-			font-style: normal;
-		}
-		@font-face {
-			font-family: 'STALKER2';
-			src: url('assets/fonts/stalker2.eot?#iefix') format('embedded-opentype'),
-			url('assets/fonts/stalker2.woff') format('woff'),
-			url('assets/fonts/stalker2.ttf') format('truetype'),
-			url('assets/fonts/stalker2.svg#STALKER2') format('svg');
-			font-weight: normal;
-			font-style: normal;
-		}
-		@font-face {
-			font-family: 'VCR OSD Mono';
-			src: url('assets/fonts/vcr.eot?#iefix') format('embedded-opentype'),
-			url('assets/fonts/vcr.woff') format('woff'),
-			url('assets/fonts/vcr.ttf') format('truetype'),
-			url('assets/fonts/vcr.svg#VCR%20OSD%20Mono') format('svg');
-			font-weight: normal;
-			font-style: normal;
-		}
-
-		@font-face {
-			font-family: '5Computers In Love Regular';
-			src: url('assets/fonts/5Computers-In-Love.eot');
-			src: url('assets/fonts/5Computers-In-Love.eot?#iefix') format('embedded-opentype'),
-			url('assets/fonts/5Computers-In-Love.svg#my-font-family') format('svg'),
-			url('assets/fonts/5Computers-In-Love.woff') format('woff'),
-			url('assets/fonts/5Computers-In-Love.ttf') format('truetype');
-			font-weight: normal;
-			font-style: normal;
-		}
-		@font-face {
-			font-family: 'Pixel Arial 11 Bold';
-			src: url('assets/fonts/pixel.eot');
-			src: url('assets/fonts/pixel.eot?#iefix') format('embedded-opentype'),
-			url('assets/fonts/pixel.svg#my-font-family') format('svg'),
-			url('assets/fonts/pixel.woff') format('woff'),
-			url('assets/fonts/pixel.ttf') format('truetype');
-			font-weight: normal;
-			font-style: normal;
-		}
-		@font-face {
-			font-family: 'STALKER1';
-			src: url('assets/fonts/stalker1.eot');
-			src: url('assets/fonts/stalker1.eot?#iefix') format('embedded-opentype'),
-			url('assets/fonts/stalker1.svg#my-font-family') format('svg'),
-			url('assets/fonts/stalker1.woff') format('woff'),
-			url('assets/fonts/stalker1.ttf') format('truetype');
-			font-weight: normal;
-			font-style: normal;
-		}
-		@font-face {
-			font-family: 'STALKER2';
-			src: url('assets/fonts/stalker2.eot');
-			src: url('assets/fonts/stalker2.eot?#iefix') format('embedded-opentype'),
-			url('assets/fonts/stalker2.svg#my-font-family') format('svg'),
-			url('assets/fonts/stalker2.woff') format('woff'),
-			url('assets/fonts/stalker2.ttf') format('truetype');
-			font-weight: normal;
-			font-style: normal;
-		}
-		@font-face {
-			font-family: 'VCR OSD Mono';
-			src: url('assets/fonts/vcr.eot');
-			src: url('assets/fonts/vcr.eot?#iefix') format('embedded-opentype'),
-			url('assets/fonts/vcr.svg#my-font-family') format('svg'),
-			url('assets/fonts/vcr.woff') format('woff'),
-			url('assets/fonts/vcr.ttf') format('truetype');
-			font-weight: normal;
-			font-style: normal;
-		}		@font-face {
-			font-family: 'Nokia Cellphone FC Small';
-			src: url('flixel/fonts/nokiafc22.eot?#iefix') format('embedded-opentype'),
-			url('flixel/fonts/nokiafc22.woff') format('woff'),
-			url('flixel/fonts/nokiafc22.ttf') format('truetype'),
-			url('flixel/fonts/nokiafc22.svg#Nokia%20Cellphone%20FC%20Small') format('svg');
-			font-weight: normal;
-			font-style: normal;
-		}
-		@font-face {
-			font-family: 'Monsterrat';
-			src: url('flixel/fonts/monsterrat.eot?#iefix') format('embedded-opentype'),
-			url('flixel/fonts/monsterrat.woff') format('woff'),
-			url('flixel/fonts/monsterrat.ttf') format('truetype'),
-			url('flixel/fonts/monsterrat.svg#Monsterrat') format('svg');
-			font-weight: normal;
-			font-style: normal;
-		}
-
-	</style>
-	
+	<base href="https://cdn.jsdelivr.net/gh/genizy/fnaf@latest/3/">
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="HandheldFriendly" content="true" />
+    <title>Five Nights at Freddy's 3</title>
 </head>
+
 <body>
-	
-	<noscript>This webpage makes extensive use of JavaScript. Please enable JavaScript in your web browser to view this page.</noscript>
-	
-	<div id="openfl-content"></div>
-	
-	<script type="text/javascript">
-		lime.embed ("Vs FNaF 3", "openfl-content", 1280, 720, { parameters: {} });
-	</script>
-	
-	<!-- You can find the sources of the game on the website gamebanana.com -->
-	
+    <div style="display: inline-block; -webkit-user-select: none; text-align: left">
+        <canvas id="MMFCanvas" width="1280" height="720"> Your browser does not support Canvas, Please try again. </canvas>
+    </div>
+    <div id="progress-container">
+        <div style="margin-bottom: 6px;">Downloading... <span id="download-text">0%</span></div>
+        <div style="width: 100%; background: #444; border-radius: 6px; overflow: hidden;">
+            <div id="download-bar" style="height: 10px; background: #3b82f6; width: 0%; transition: width 0.2s;"></div>
+        </div>
+        <div style="margin: 12px 0 6px;">Extracting... <span id="extract-text">0%</span></div>
+        <div style="width: 100%; background: #444; border-radius: 6px; overflow: hidden;">
+            <div id="extract-bar" style="height: 10px; background: #10b981; width: 0%; transition: width 0.2s;"></div>
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+    <script src="main.js"></script>
 </body>
+
 </html>
